--- a/TestingApp/package.json
+++ b/TestingApp/package.json
@@ -22,8 +22,10 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "core-js": "^2.4.1",
+    "ng2-modal-dialog": "^2.0.5",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
+   
   },
   "devDependencies": {
     "@angular/cli": "1.4.2",
